--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "mongoose": "^6.0.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "randomstring": "^1.2.1",
+    "read-excel-file": "^5.2.25"
   }
 }
