--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production babel-node server",
-    "dev": "nodemon --exec babel-node server"
+    "dev": "nodemon --exec babel-node server",
+    "test": "NODE_ENV=test jest --testTimeout=30000 --detectOpenHandles",
+    "seed:db": "node seeder -i",
+    "clear:db": "node seeder -d"
   },
   "author": "Muhammed Ibrahim",
   "license": "ISC",
@@ -14,17 +17,32 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "regenerator-runtime": "^0.13.9"
   },
   "dependencies": {
+    "chai": "^4.3.4",
     "colors": "^1.4.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "jest": "^27.4.3",
+    "mocha": "^9.1.3",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "randomstring": "^1.2.1",
-    "read-excel-file": "^5.2.25"
+    "read-excel-file": "^5.2.25",
+    "supertest": "^6.1.6"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "setupFilesAfterEnv": [
+      "./test/setupTests.js"
+    ]
   }
 }
