--- a/config/config.env
+++ b/config/config.env
@@ -4,3 +4,6 @@ TEST_MONGO_URI=mongodb://localhost:27017/test
 
 PORT=5000
 TEST_APP_PORT=5000
+
+FILE_UPLOAD_PATH= ./public/uploads
+MAX_FILE_UPLOAD=1000000
