--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production babel-node server",
+    "start": "NODE_ENV=production node server",
     "dev": "nodemon",
     "test": "NODE_ENV=test jest --testTimeout=30000 --detectOpenHandles",
     "test:watch": "NODE_ENV=test jest --testTimeout=30000 --detectOpenHandles --watch",
