--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run:
           name: Install npm dependencies
           command: |
-            npm install --save
+            npm install
       - run:
           name: Run Integration tests
           command: npm test
