--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ machine:
 
 jobs:
   run_tests:
+    name: 'Integration Tests'
     docker:
       - image: circleci/node:10.16.3
       - image: circleci/mongo:4.0
